fixed spacing of pace calc input

--- a/index.css
+++ b/index.css
@@ -108,16 +108,25 @@ html, body {
 
 .form-item {
     padding: 2px 0px;
+    display: flex;
 }
 
 .calculator-label {
     display: inline-block;
-    width: 30%;
+    width: 120px;
 }
 
 .calculator-selector {
-    display: inline-block;
+    display: flex;
     width: 65%;
+    margin-left: auto;
+    justify-content: space-between;
+}
+
+
+.unit-input-box {
+    width: 30%;
+    display: inline-block;
 }
 
 .input, .input:focus {
@@ -129,16 +138,21 @@ html, body {
 }
 
 .select {
-    width: 90%;
+    width: 97%;
 }
 
 .time-input {   
-    width: 20%;
+    flex-grow: 1;
+    max-width: 70%;
 }
 
 .time-unit {
-    width: 5%;
-    padding-right: 2%;
+    display: inline-block;
+    width: 15%;
+}
+
+.results {
+    max-width: 200px;
 }
 
 form {
